--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -33,6 +33,7 @@
     <string name="instr_5">Dans le niveau suivant, un nouveau type de puce est disponible. Il est étiqueté « SHR 1 », ce qui signifie « shift right by 1 ».\n\nTous les chiffres sont déplacés d\'une position vers la droite. Le chiffre le plus à gauche est remplacé par 0. Par exemple, 0110 devient 0011. \n\nCette opération est équivalente à diviser la valeur par 2.</string>
     <string name="instr_6">Pour des niveaux réussis, vous gagnez de précieux écus : des crypto-coins. Cela vous permet de recruter des héroïnes et des héros de l\'ère de l\'information qui vous donneront des avantages significatifs dans le jeu.\n\nPour chaque niveau il y a  un nombre maximum de crypto-coins, indiqué dans la barre d\'état. Chaque vie perdue réduit le nombre de crypto-coins.\n\nSi tous les écus ne sont pas gagnés dès le premier tour, le niveau peut être répété à volonté. Cependant, si le maximum est atteint, vous ne recevrez plus d\'écus pour ce niveau.\n\n</string>
     <string name="instr_7">Parfois, on voit un crypto-coin se déplacer avec les attaquants. Vous pouvez le ramasser en le détruisant, même plusieurs fois lorsque vous rejouez le niveau.\n\nMais attention, le crypto-coin mouvant est plus puissant que les attaquants ordinaires, et si il atteint le processeur, cela vous coûtera une vie.</string>
+    <string name="instr_7a">"Astuce :\n\nSi vous êtes coincé, vous pouvez rejouer l'un des niveaux plus pas pour y attraper un crypto-coin ambulant. "</string>
     <string name="instr_8">"Vous pouvez vendre des puces et réutiliser leurs emplacements. La plupart de l'information sera remboursée.\n "</string>
     <string name="instr_9">\nIntroduisons une autre puce. La puce MEM (pour « memory ») prend un numéro et le stocke en toute sécurité dans la mémoire de l\'ordinateur.\n\nLes puces MEM sont puissantes car elles peuvent éliminer n\'importe quel attaquant, mais elles sont très lentes.</string>
     <string name="instr_10">\nLa puce accumulateur (ACC) est un peu plus complexe que les autres, mais elle peut être très efficace contre un grand nombre d’attaquants. Elle prend deux valeurs et les combine en un seul résultat.\n\nDans sa variante de base, elle additionne les deux valeurs. Après la première amélioration, elle fera une opération « ou binaire », après une deuxième amélioration « et binaire ».\n\nExemple : Si les nombres 0110 (soit 6) et 0011 (soit 3) entrent dans la puce ACC, le résultat sera\n1001 (soit 9) lors d\'une addition [ACC +]\n0111 (soit 7) en utilisant  « ou » [ACC v]\n0010 (soit 2) en utilisant « et » [ACC &amp;].\n\nL’avantage de l’ACC est qu’elle est vraiment rapide.\n</string>
@@ -66,6 +67,7 @@
     <string name="shortdesc_lives">vies supplementaires</string>
     <string name="shortdesc_frequency">frequence attaquants</string>
     <string name="shortdesc_att_speed">vitesse attaquants</string>
+    <string name="shortdesc_att_strength">puissance attaquants</string>
     <string name="shortdesc_info_gain">gain d\'info</string>
     <string name="shortdesc_range">Portée des puces</string>
     <string name="shortdesc_refund">remboursement vente</string>
@@ -79,6 +81,7 @@
     <string name="HERO_EFFECT_FREQUENCY">réduit la fréquence des attaquants</string>
     <string name="HERO_EFFECT_INFOOVERTIME">gagne de l\'information au fil du temps</string>
     <string name="HERO_EFFECT_ATTSPEED">réduit la vitesse des attaquants</string>
+    <string name="HERO_EFFECT_ATTSTRENGTH">réduit la puissance des attaquants</string>
     <string name="HERO_EFFECT_REFUNDPRICE">"augmente le remboursement lors "</string>
     <string name="HERO_EFFECT_RANGE">augmente la portée des puces</string>
     <string name="toast_loading">Chargement ...</string>
@@ -93,4 +96,7 @@
     <string name="instr_2_1">"En mode turbo, les attaquants sont plus rapides, plus forts et plus nombreux.  De plus, certains slots sont déjà occupés par des puces indésirables que tu dois gérer. "</string>
     <string name="settings_disable_background">Désactiver l\'arrière-plan</string>
     <string name="settings_show_atts_in_range">Montrer les attaquants à portée</string>
+    <string name="mandelbrot">Benoît B. Mandelbrot a été le principal fondateur de la géométrie fractale, qui permet non seulement de décrire très bien de nombreuses structures dans la nature, mais aussi de créer des graphiques fantastiques sur ordinateur. \n\nLa représentation de l\'ensemble de Mandelbrot est devenu virale et a démarré une nouvelle ère de l\'art informatique.</string>
+    <string name="shortdesc_info_on_kill">Gain d\'info additionnel</string>
+    <string name="HERO_EFFECT_GAININFO">augmente le gain d\'information en détruisant les attaquants</string>
 </resources>
