descriptions and translations

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -96,7 +96,8 @@
     <string name="instr_2_1">"En mode turbo, les attaquants sont plus rapides, plus forts et plus nombreux.  De plus, certains slots sont déjà occupés par des puces indésirables que tu dois gérer. "</string>
     <string name="settings_disable_background">Désactiver l\'arrière-plan</string>
     <string name="settings_show_atts_in_range">Montrer les attaquants à portée</string>
-    <string name="mandelbrot">Benoît B. Mandelbrot a été le principal fondateur de la géométrie fractale, qui permet non seulement de décrire très bien de nombreuses structures dans la nature, mais aussi de créer des graphiques fantastiques sur ordinateur. \n\nLa représentation de l\'ensemble de Mandelbrot est devenu virale et a démarré une nouvelle ère de l\'art informatique.</string>
+    <string name="mandelbrot">Benoît Mandelbrot a été le principal fondateur de la géométrie fractale, qui permet non seulement de décrire très bien de nombreuses structures dans la nature, mais aussi de créer des graphiques fantastiques sur ordinateur. \n\nLa représentation graphique de l\'ensemble de Mandelbrot est devenu virale et a démarré une nouvelle ère de l\'art informatique.</string>
     <string name="shortdesc_info_on_kill">Gain d\'info additionnel</string>
     <string name="HERO_EFFECT_GAININFO">augmente le gain d\'information en détruisant les attaquants</string>
+    <string name="schneier">"Bruce Schneier est un expert en cryptographie et en sécurité de l'information. Il a écrit d'importants ouvrages sur le sujet, notamment \"Applied Cryptography\", et a développé plusieurs algorithmes cryptographiques.\n        \nIl n'hésite pas à critiquer les gouvernements ou les entreprises internationales s'il estime que leurs mesures vont à l'encontre de la sécurité ou violent le droit à la vie privée.\n "</string>
 </resources>
