--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -152,4 +152,5 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="shortdesc_info_on_kill">Infogewinn</string>
     <string name="HERO_EFFECT_GAININFO">Erhöht die durch Zerstören der Angreifer gewonnene Information</string>
     <string name="schneier">Bruce Schneier ist ein Experte für Kryptographie und Informationssicherheit. Er hat wichtige Bücher zu diesem Thema geschrieben, vor allem \"Applied Cryptography\", und mehrere kryptographische Algorithmen entwickelt.\n        \nEr scheut sich nicht, Regierungen oder Großkonzerne zu kritisieren, wenn er der Meinung ist, dass ihre Maßnahmen kontraproduktiv für die Sicherheit sind oder das Recht auf Privatsphäre verletzen.</string>
+    <string name="cost_desc">[Kosten: %d]</string>
 </resources>
