--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,6 +219,10 @@ Furthermore, some slots are already taken by unwanted chips you'll have to deal 
     <string name="settings_show_atts_in_range">Show attackers in range</string>
     <string name="series_completed_message_1">" "</string>
     <string name="series_completed_message_4">" "</string>
+    <string name="query_quit">Do you want to quit the current stage?</string>
+    <string name="return_to_main_menu">Return to main menu</string>
+    <string name="replay">Replay stage</string>
+    <string name="settings_use_large_buttons">Use large buttons</string>
 
 
 </resources>
