--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@ In hex, you have digits from 0 to 9 and then from A to F. The hex number 0x0F eq
     <string name="instr_13">
 "Note that cryptocoins are unaffected by ACC and also by MEM chips."
     </string>
+    <string name="instr_14">Another chip becomes available! \n\nThe CLK (clock) chip does not affect the attackers itself. Instead, it speeds up the other chips on the board. Each time the CLK ticks, the cooldown timer of all other chips is reset, and they become ready to operate anew.\n\nUpgrading increases the CLK frequency.</string>
 
     <string name="turing">
 "Alan Turing was one of the most important persons in computer science. He created many of the foundations in theoretical computing, such as the Turing machine and the Turing test, but he is also famous for cracking the Enigma code in World War 2. His impact on the outcome of the war can hardly be overestimated.
@@ -195,7 +196,7 @@ The programming language Pascal is named after him."</string>
     <string name="upgrade_format">%s  [cost: %d]</string>
     <string name="toast_next_stage">Stage %d</string>
     <string name="toast_stage_cleared">Stage cleared</string>
-    <string name="HERO_EFFECT_CHIPSPEED">Increases speed of all %s chips</string>
+    <string name="HERO_EFFECT_CHIPSPEED">Decreases cooldown time of all %s chips</string>
     <string name="HERO_EFFECT_STARTINFO">Increases information at start of level</string>
     <string name="HERO_EFFECT_UPGRADECOST">Reduces upgrade cost of all chips</string>
     <string name="HERO_EFFECT_LIVES">Grants additional lives</string>
