--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -226,7 +226,7 @@ Furthermore, some slots are already taken by unwanted chips you'll have to deal 
     <string name="query_quit">Do you want to quit the current stage?</string>
     <string name="return_to_main_menu">Return to main menu</string>
     <string name="replay">Replay stage</string>
-    <string name="settings_use_large_buttons">Use large buttons</string>
+    <string name="settings_use_large_buttons">Use large objects</string>
     <string name="settings_show_framerate">Show frame rate</string>
 
 
