--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,7 +171,7 @@ The programming language Pascal is named after him."</string>
     <string name="hopper">"\nGrace Brewster Murray Hopper had the idea that computer programs could be written in human-readable language instead of as sequences of Ones and Zeroes. She designed the FLOW-MATIC programming language, and thus invented the first compiler.\n    "</string>
     <string name="mandelbrot">Benoît Mandelbrot was the most important founder of fractal geometry, which can not only be used to describe many structures in nature very well, but also to create fantastic graphics on the computer. \n\nThe grpahical representation of the Mandelbrot set went viral and founded a new age of computer art.</string>
     <string name="schneier">"Bruce Schneier is an expert on cryptography and information security. He has written important books on the subject, most notably 'Applied Cryptography', and has designed several cryptographic algorithms.\n        \nHe is not afraid of criticizing governments or global companies if he deems their actions counterproductive to security or violating the right of privacy.\n "</string>
-    <string name="meier">"Sidney K. Meier\n "</string>
+    <string name="meier">Sidney K. Meier has created some of the most influential strategy games and revolutionised the genre. With comparatively simple rules, his games simulate the complexities of reality amazingly well. And they always tell a story: of the age of the railways, of the American Revolution, or - as in his most famous work \'Civilization\' - of 6000 years of human history.</string>
     <string name="settings_title">Settings</string>
     <string name="settings_about">About</string>
     <string name="license">\n        \nThis game is open source. Visit https://github.com/ochadenas/cpudefense for more information.\n\nThe portraits of the Information Age Heroes are mostly derived from works of the public domain.\n\nOriginal photos:\n  Alex Handy (CC BY-SA 2.0)\n  Jacob Appelbaum (CC BY-SA 2.5)\n  Konrad Jacobs (CC BY-SA 2.0 de)\n  Rama (CC BY-SA 2.0 fr)\n  Shervinafshar (CC BY-SA 3.0)\n  Tony Bove (CC BY 3.0)\n  Wolfgang Hunscher (CC BY-SA 3.0)\n  Silvano de Gennaro (courtesy of the author)\n  Clermont Auvergne Métropole (CC BY-SA 4.0)\n  Jean-Frédéric (CC BY 2.0)\n\nComputer boards:\n  Autopilot (CC BY-SA 4.0)\n  Bill Bertram (CC-BY 2.0)\n  Oliver Chadenas (CC BY-SA 3.0)\n  Smial (FAL)\n\nAll other artwork:\n  Oliver Chadenas (CC BY-SA 3.0)</string>
@@ -192,7 +192,7 @@ The programming language Pascal is named after him."</string>
     <string name="shortdesc_info_gain">Information gain</string>
     <string name="shortdesc_range">Chip range</string>
     <string name="shortdesc_refund">Refund when selling chips</string>
-    <string name="shortdesc_max_hero_upgrade">Additional hero upgrade</string>
+    <string name="shortdesc_max_hero_upgrade">Increase of max hero level</string>
     <string name="upgrade_format">%s  [cost: %d]</string>
     <string name="toast_next_stage">Stage %d</string>
     <string name="toast_stage_cleared">Stage cleared</string>
@@ -204,7 +204,7 @@ The programming language Pascal is named after him."</string>
     <string name="HERO_EFFECT_INFOOVERTIME">Gains additional bits over time</string>
     <string name="HERO_EFFECT_ATTSPEED">Reduces attacker speed</string>
     <string name="HERO_EFFECT_ATTSTRENGTH">Reduces attacker strength</string>
-    <string name="HERO_EFFECT_MAXHEROUPGRADE">Increases maximal upgrade level of all heroes</string>
+    <string name="HERO_EFFECT_MAXHEROUPGRADE">Increases maximal upgrade level of other heroes</string>
     <string name="HERO_EFFECT_REFUNDPRICE">Increases refund when selling chips</string>
     <string name="HERO_EFFECT_GAININFO">Increases information gain through destroying attackers</string>
     <string name="HERO_EFFECT_RANGE">Increases %s chip range</string>
