--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="next_stage">Next stage: %d</string>
     <string name="coins_gathered">Coins gathered: %d.</string>
     <string name="game_start">Starting game.</string>
-    <string name="continue_game">Enter</string>
+    <string name="enter_game">Enter</string>
     <string name="scoreboard_inf">Inf</string>
     <string name="scoreboard_waves">Wave</string>
     <string name="scoreboard_status">Status</string>
@@ -25,6 +25,7 @@
     <string name="level_entry">Level %d</string>
     <string name="level_selector">Level Selector</string>
     <string name="query_reset">Do you want to reset all heroes?</string>
+    <string name="query_restart_game">Really start new game? This will reset all your progress.</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
 
@@ -225,6 +226,7 @@ Furthermore, some slots are already taken by unwanted chips you'll have to deal 
     <string name="series_completed_message_4">" "</string>
     <string name="query_quit">Do you want to quit the current stage?</string>
     <string name="return_to_main_menu">Return to main menu</string>
+    <string name="continue_game">Continue playing</string>
     <string name="replay">Replay stage</string>
     <string name="settings_use_large_buttons">Use large objects</string>
     <string name="settings_show_framerate">Show frame rate</string>
