--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -113,5 +113,5 @@
     <string name="replay">Rejouer le niveau</string>
     <string name="settings_use_large_buttons">Utiliser de grands boutons</string>
     <string name="settings_show_framerate">Afficher le frame-rate</string>
-    <string name="button_purchase_plural">"Recruter [1 écus] "</string>
+    <string name="button_purchase_plural">"Recruter [%d écus] "</string>
 </resources>
