--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -80,8 +80,9 @@ In Hex gibt es die Ziffern von 0 bis 9 und dann von A bis F. Die Hex-Zahl 0x0F e
 
 Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954, vermutlich nahm er sich selbst das Leben."
     </string>
-    <string name="button_purchase">Anheuern</string>
+    <string name="button_purchase">"Anheuern [1 Coin] "</string>
     <string name="query_reset">Möchtest du alle Heldinnen und Helden zurücksetzen?</string>
+    <string name="query_restart_game">Wirklich ein neues Spiel beginnen?  Dadurch wird der gesamte Fortschritt zurück auf Null gesetzt.</string>
     <string name="no">Nein</string>
     <string name="instr_7a">Tipp:\n\nWenn du nicht weiter kommst, kannst du einen der niedrigeren Level erneut spielen, um dort einen Cryptocoin einzufangen.\n</string>
     <string name="instr_8">
@@ -152,7 +153,7 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="wiener">" Norbert Wiener ist als Begründer der Kybernetik bekannt, also der Steuerung und Regelung von Maschinen, und ist damit einer der Wegbereiter von Künstlicher Intelligenz. Der von ihm geprägte Begriff 'cyber' ist heute allgegenwärtig.  Er entwickelte mathematische Theorien, vor allem im Bereich der Mustererkennung und Bildbearbeitung, und bewies eine Reihe von mathematischen Sätzen.  Aufgrund der Erfahrungen im 2. Weltkrieg nahm er eine zunehmend pazifistische Haltung ein und weigerte sich, Werke zu veröffentlichen, die in den Händen von Militaristen Schaden anrichten könnten.     "</string>
     <string name="settings_disable_background">Hintergrund ausschalten</string>
     <string name="settings_show_atts_in_range">Angreifer in Reichweite zeigen</string>
-    <string name="mandelbrot">Der Mathematiker Benoît Mandelbrot war der wichtigste Begründer der Fraktalen Geometrie, mit der sich nicht nur viele Strukturen in der Natur sehr gut beschreiben, sondern auch phantastische Grafiken am Rechner erzeugen lassen. \n\nDie graphischen Darstellungen der Mandelbrot-Menge, die sogenannten Apfelmännchen, gingen viral und begründeten ein neues Zeitalter der Computerkunst.\n</string>
+    <string name="mandelbrot">Der Mathematiker Benoît Mandelbrot war der wichtigste Begründer der Fraktalen Geometrie, mit der sich nicht nur viele Strukturen in der Natur sehr gut beschreiben, sondern auch phantastische Grafiken am Rechner erzeugen lassen. \n\nDie grafischen Darstellungen der Mandelbrot-Menge, die sogenannten Apfelmännchen, gingen viral und begründeten ein neues Zeitalter der Computerkunst.\n</string>
     <string name="shortdesc_info_on_kill">Infogewinn</string>
     <string name="HERO_EFFECT_GAININFO">Erhöht die durch Zerstören der Angreifer gewonnene Information</string>
     <string name="schneier">Bruce Schneier ist ein Experte für Kryptographie und Informationssicherheit. Er hat wichtige Bücher zu diesem Thema geschrieben, vor allem \"Applied Cryptography\", und mehrere kryptographische Algorithmen entwickelt.\n        \nEr scheut sich nicht, Regierungen oder Großkonzerne zu kritisieren, wenn er der Meinung ist, dass ihre Maßnahmen kontraproduktiv für die Sicherheit sind oder das Recht auf Privatsphäre verletzen.</string>
@@ -160,7 +161,9 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="hopper">\nGrace Brewster Murray Hopper hatte die Idee,  Computerprogramme  statt als Abfolge von Einsen und Nullen in einer für den Menschen lesbaren Sprache zu formulieren. \n\nSie entwickelte die Programmiersprache FLOW-MATIC und erfand damit den ersten Compiler.</string>
     <string name="query_quit">Aktuellen Level abbrechen?</string>
     <string name="return_to_main_menu">Zurück zum Hauptmenü</string>
+    <string name="continue_game">Weiterspielen</string>
     <string name="replay">Level erneut spielen</string>
     <string name="settings_use_large_buttons">Große Schaltflächen verwenden</string>
     <string name="settings_show_framerate">Framerate anzeigen</string>
+    <string name="button_purchase_plural">Anheuern [%d Coins]</string>
 </resources>
