--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,9 +79,7 @@ If you do not get all the coins, you can always replay the level. However, once 
 
 But be careful. The moving cryptocoin is stronger than ordinary attackers, and if it reaches the CPU, it will take one of your lives."
     </string>
-    <string name="instr_7a">
-"Hint: If you are stuck, you can replay a lower level trying to catch a running cryptocoin."
-    </string>
+    <string name="instr_7a">Some hints:\n\nRemember that SHR chips are powerful but cannot eliminate attackers. They quickly reduce large values, but against hordes of weak attackers, multiple SUB chips may be a more cost-effective defence.\n\nChips need to cool down between operations. Hire heroes to reduce the chance of grouped attackers overwhelming a chip.\n\nIf you are stuck, you can replay a lower level trying to catch a running cryptocoin.\n</string>
     <string name="instr_8">
 "You can sell existing chips and re-use their slot. Most, but not all of the information will be refunded."
     </string>
@@ -214,6 +212,7 @@ The programming language Pascal is named after him."</string>
     <string name="name_series_1">Normal</string>
     <string name="name_series_2">Turbo</string>
     <string name="message_series_unavailable">Complete all levels in \'normal\' mode first.</string>
+    <string name="message_endless_unavailable">Available after completing all previous levels.</string>
     <string name="stage_reached">Stage reached: %s %d</string>
     <string name="series_completed_message_2">You may replay all levels</string>
     <string name="series_completed_message_3">in \'turbo\' mode now.</string>
