--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,6 +230,8 @@ Furthermore, some slots are already taken by unwanted chips you'll have to deal 
     <string name="replay">Replay stage</string>
     <string name="settings_use_large_buttons">Use large objects</string>
     <string name="settings_show_framerate">Show frame rate</string>
+    <string name="button_back">Close</string>
+    <string name="button_about">About ...</string>
 
 
 </resources>
