--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">ChipDefense</string>
     <string name="button_startGame">Start new game</string>
     <string name="pref_filename" translatable="false">prefs.xml</string>
+    <string name="pref_filename_level_structure" translatable="false">structure</string>
     <string name="button_resume">Resume</string>
     <string name="failed">Failed to clear stage.</string>
     <string name="success">All stages cleared!</string>
