--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -166,4 +166,17 @@ Ein Teil der Information wird dir dabei zurückerstattet."
     <string name="settings_use_large_buttons">Große Schaltflächen verwenden</string>
     <string name="settings_show_framerate">Framerate anzeigen</string>
     <string name="button_purchase_plural">Anheuern [%d Coins]</string>
+    <string name="button_back">Schließen</string>
+    <string name="button_about">Über ...</string>
+    <string name="instr_endless">Du hast alle Level geschafft und das Spiel gewonnen!\n\nWenn du willst, kannst du nun im \"Endlos\"-Modus weitermachen, mit zufällig generierten Leveln, die immer schwieriger werden.\n\nWie weit kommst du?\n</string>
+    <string name="message_endless_unavailable">Verfügbar nach Abschluss aller vorherigen Level.</string>
+    <string-array name="fun_fact">
+        <item>Bis 1999 war ein <i>Kilobyte</i> noch 1024 Bytes. Aus Gründen der Konsistenz mit anderen SI-Einheiten wurde die Bedeutung zu \"1000 Bytes\" geändert.\n\nGleichzeitig wurde das <i>Kibibyte</i> erfunden. Es gilt: 1 KiB = 1024 B.</item>
+        <item>An actual computer bug was found in a Mark II computer in 1947. A small insect had gotten into a relay, making programs fail.\nThe term "bug" for programming errors, however, had been coined long time ago.</item>
+        <item>"Breadbin" (or "breadbox") was a nickname for the Commodore C64, due to its characteristic form.</item>
+        <item>Die Frage, welches der erste moderne Computer war, lässt sich salomonisch so beantworten:\nDie Z3 von Konrad Zuse war 1941 fertig gestellt und damit vier Jahre vor dem ENIAC. Sie arbeitete mit Relais und war damit der erste <i>elektromechanische</i> Computer, während ENIAC Vakuumröhren verwendete und daher als der erste <i>elektronische</i> Computer gilt.</item>
+        <item></item>
+        <item></item>
+    </string-array>
+    <string name="instr_did_you_know">Schon gewusst?</string>
 </resources>
